@@ -38,6 +38,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - cont3xt - new Cont3xt application, see https://arkime.com/cont3xt
   - cont3xt/viewer - share new user UI
   - common - fix userAuthIps setting
+  - parliament - added --insecure option
   - parliament/wise - can be configured to use shared user DB
   - wise - fix some stats sorting
   - wise - fix UI saving of INI formatted config
